--- a/back/.env
+++ b/back/.env
@@ -1,2 +1,4 @@
-EMAIL_HOST_USER = 'hooman.honarvar2770@gmail.com'
-EMAIL_HOST_PASSWORD= 'HMIbLTG6SxkRzaCm'
+export EMAIL_HOST_USER = hooman.honarvar2770@gmail.com
+export EMAIL_HOST_PASSWORD= HMIbLTG6SxkRzaCm
+
+export NON_FIELD_ERRORS_KEY= error
