backend is almost done

--- a/back/.env
+++ b/back/.env
@@ -2,3 +2,4 @@ export EMAIL_HOST_USER = hooman.honarvar2770@gmail.com
 export EMAIL_HOST_PASSWORD= HMIbLTG6SxkRzaCm
 
 export NON_FIELD_ERRORS_KEY= error
+finish = True
