adding redirecting for reseting password api

--- a/back/.env
+++ b/back/.env
@@ -3,3 +3,4 @@ export EMAIL_HOST_PASSWORD= HMIbLTG6SxkRzaCm
 
 export NON_FIELD_ERRORS_KEY= error
 finish = True
+FRONT_END_URL=http://localhost:3000
